--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@ return(
 
                 
                 <div className="flex gap-2 items-center flex-wrap">
-                  <span className="text-sm font-medium">Stats:</span>
+                  <span className="text-sm font-medium"></span>
                   {[
                     {key:'Goals',label:'Goals'},
                     {key:'FO/SOG',label:'FO/SOG'},
@@ -1065,7 +1065,23 @@ return(
 
 
                 <div className="flex gap-2 items-center flex-wrap">
-                  <label className="flex items-center gap-2 cursor-pointer">
+ 
+<label className="hidden sm:flex items-center gap-2">
+  <span className="text-sm"></span>
+  <select
+    value={playerStatsViewMode}
+    onChange={(e)=>setPlayerStatsViewMode(e.target.value)}
+    className={`px-2 py-1 rounded text-sm ${
+      darkMode ? 'bg-gray-700 text-white' : 'bg-white text-gray-800'
+    }`}
+  >
+    <option value="sideBySide">Side by Side</option>
+    <option value="stacked">Stacked</option>
+  </select>
+</label>
+
+
+                 <label className="flex items-center gap-2 cursor-pointer">
                     <input
                       type="checkbox"
                       checked={playerStatsEditMode}
@@ -1075,17 +1091,7 @@ return(
                     <span className="text-sm">Edit</span>
                   </label>
                   
-                  <label className="flex items-center gap-2">
-                    <span className="text-sm"></span>
-                    <select
-                      value={playerStatsViewMode}
-                      onChange={(e)=>setPlayerStatsViewMode(e.target.value)}
-                      className={`px-2 py-1 rounded text-sm ${darkMode?'bg-gray-700 text-white':'bg-white text-gray-800'}`}
-                    >
-                      <option value="sideBySide">Side by Side</option>
-                      <option value="stacked">Stacked</option>
-                    </select>
-                  </label>
+
                 </div>
 
                 </div>
