--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@ const DEFAULT_AWAY = 'AWAY TEAM';
       const normalizePeriodStats = (stats) => {
         const normalized = {};
         for (let p = 1; p <= 4; p++) {
+          // Only add period 4 if it actually exists in the data
+          if (p === 4 && !stats?.[p]) {
+            continue;
+          }
           normalized[p] = {
             homeScore: stats?.[p]?.homeScore ?? 0,
             awayScore: stats?.[p]?.awayScore ?? 0,
@@ -1563,14 +1567,14 @@ return(
                 </div>
                 <div className="flex items-center gap-1">
                   <button onClick={copyCode} className={`${darkMode?'bg-gray-700':'bg-white bg-opacity-20'} px-2 py-1 rounded font-mono font-bold text-xs`}>{matchCode}</button>
-                  {!matchEnded && isCreator && (
-                    <button onClick={endMatch}
-                      className="bg-red-500 hover:bg-red-600 px-2 py-1 rounded text-xs font-semibold whitespace-nowrap"
-                      title="End match for all users (Creator only)"
-                    >
-                      End
-                    </button>
-                  )}
+          {!matchEnded && isCreator && !isViewer && (
+            <button onClick={endMatch}
+              className="bg-red-500 hover:bg-red-600 px-2 py-1 rounded text-xs font-semibold whitespace-nowrap"
+              title="End match for all users (Creator only)"
+            >
+              End
+            </button>
+          )}
                   {!matchEnded && !isViewer && !isCreator && (
                     <button onClick={leaveMatch}
                       className="bg-orange-500 hover:bg-orange-600 px-2 py-1 rounded text-xs font-semibold whitespace-nowrap"
