--- a/index.html
+++ b/index.html
@@ -1546,9 +1546,9 @@ return(
                     <div className={`${darkMode?'bg-gray-700':'bg-blue-50'} rounded-lg p-3`}>
                       <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{ft.name}</div>
                       <div className="flex items-center justify-center gap-2 mb-2">
-                        <button onClick={()=>updateStat(ft.team,'Saves',-1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
+                        <button onClick={()=>updateStat(ft.team,'Saves',-1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-red-500 hover:bg-red-600':'bg-red-500 hover:bg-red-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
                         <div className={`text-4xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ft.team}Saves${currentPeriod}`]?'sparkle':''}`}>{ft.saves}</div>
-                        <button onClick={()=>updateStat(ft.team,'Saves',1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
+                        <button onClick={()=>updateStat(ft.team,'Saves',1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-green-500 hover:bg-green-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
                       </div>
                       <div className={`text-xs text-center mb-2 ${darkMode?'text-gray-300':'opacity-75'}`}>By period: {Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][ft.team+'Saves']}{i<arr.length-1?'-':''}</span>)}</div>
                       <div className={`${darkMode?'bg-gray-600 text-gray-100':'bg-white'} rounded p-2 text-xs`}>
@@ -1575,9 +1575,9 @@ return(
                     <div className={`${darkMode?'bg-gray-700':'bg-red-50'} rounded-lg p-3`}>
                       <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{on}</div>
                       <div className="flex items-center justify-center gap-2 mb-2">
-                        <button onClick={()=>updateStat(ot,'Saves',-1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
+                        <button onClick={()=>updateStat(ot,'Saves',-1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-red-500 hover:bg-red-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
                         <div className={`text-4xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ot}Saves${currentPeriod}`]?'sparkle':''}`}>{otsv}</div>
-                        <button onClick={()=>updateStat(ot,'Saves',1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-gray-300 hover:bg-gray-400'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
+                        <button onClick={()=>updateStat(ot,'Saves',1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-green-500 hover:bg-green-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
                       </div>
                       <div className={`text-xs text-center mb-2 ${darkMode?'text-gray-300':'opacity-75'}`}>By period: {Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][ot+'Saves']}{i<arr.length-1?'-':''}</span>)}</div>
                       <div className={`${darkMode?'bg-gray-600 text-gray-100':'bg-white'} rounded p-2 text-xs`}>
