--- a/index.html
+++ b/index.html
@@ -1546,7 +1546,7 @@ return(
                     <div className={`${darkMode?'bg-gray-700':'bg-blue-50'} rounded-lg p-3`}>
                       <div className={`text-sm font-semibold text-center mb-2 ${darkMode?'text-gray-100':''}`}>{ft.name}</div>
                       <div className="flex items-center justify-center gap-2 mb-2">
-                        <button onClick={()=>updateStat(ft.team,'Saves',-1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-red-500 hover:bg-red-600':'bg-red-500 hover:bg-red-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
+                        <button onClick={()=>updateStat(ft.team,'Saves',-1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-red-500 hover:bg-red-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>−</button>
                         <div className={`text-4xl font-bold text-center min-w-[80px] ${darkMode?'text-white':''} ${sparkleStats[`${ft.team}Saves${currentPeriod}`]?'sparkle':''}`}>{ft.saves}</div>
                         <button onClick={()=>updateStat(ft.team,'Saves',1)} disabled={matchEnded||isViewer} className={`${darkMode?'bg-gray-600 hover:bg-gray-500':'bg-green-500 hover:bg-green-600'} text-white w-12 h-12 rounded-lg text-2xl font-bold`}>+</button>
                       </div>
