--- a/index.html
+++ b/index.html
@@ -1233,17 +1233,23 @@ return(
               </div>
             </div>
             
-            <div className="max-w-7xl mx-auto p-4">
+<div className="max-w-7xl mx-auto p-4">
                 <div
-    className="grid gap-3"
+    className={`grid gap-3 ${
+      playerStatsViewMode === 'sideBySide' && playerStatsMoment === 'All'
+        ? 'md:grid-cols-2'
+        : ''
+    }`}
     style={
       playerStatsViewMode === 'sideBySide' &&
-      (playerStatsMoment === 'HG' || playerStatsMoment === 'AG')
+      (playerStatsMoment === 'HG' || playerStatsMoment === 'AG' || playerStatsMoment === 'FO/SOG')
         ? {
             gridTemplateColumns:
               playerStatsMoment === 'HG'
                 ? '2fr 1fr'   // HOME bred, AWAY smal
-                : '1fr 2fr'   // AWAY bred, HOME smal
+                : playerStatsMoment === 'AG'
+                ? '1fr 2fr'   // AWAY bred, HOME smal
+                : '1fr 1fr'   // FO/SOG - 50/50
           }
         : undefined
     }
@@ -2261,4 +2267,3 @@ return(
   </script>
 </body>
 </html>
-
