--- a/index.html
+++ b/index.html
@@ -466,6 +466,9 @@ if (isCurrentlyInMatch) {
   const path=isViewer?`viewers/${userId.current}`:`users/${userId.current}`;
 const ur=matchRef.current.child(path);
 
+// ⬅️ DEKLARERA kickedUsersRef HÄR (före if-blocket)
+const kickedUsersRef = matchRef.current.child('kickedUsers');
+
 if(isViewer){
   // Viewers kan alltid ansluta
   ur.set(true);
@@ -477,7 +480,6 @@ if(isViewer){
     const isCreatorOfThisMatch = currentMatch?.creatorId === userId.current;
     
     if(editorCount >= 5 && !isCreatorOfThisMatch){
-      // Max editors nådd
       setError('Game is full (max 5 editors). Please try joining as viewer instead.');
       setIsMultiplayer(false);
       localStorage.removeItem('multiplayerMatch');
@@ -485,7 +487,6 @@ if(isViewer){
       return;
     }
     
-    // OK att joina
     ur.set({
       joinedAt: Date.now(),
       role: 'editor'
@@ -493,9 +494,29 @@ if(isViewer){
   });
 }
 
-ur.onDisconnect().remove();    
+ur.onDisconnect().remove();
+
+// Lyssna på kickedUsers för omedelbar detektion
+kickedUsersRef.on('value', s => {
+  const kickedUsers = s.val() || {};
+  
+  // Om jag är kickad, kasta ut mig omedelbar
+  if (!isViewer && kickedUsers[userId.current]) {
+    localStorage.removeItem('multiplayerMatch');
+    resetGameState();
+    setIsMultiplayer(false);
+    setMatchCode('');
+    setWasInMatch(false);
+    setScreen('start');
+    alert('You have been removed from this match. You can join as a viewer instead using the viewer code (-V)');
+  }
+});
+
 localStorage.setItem('multiplayerMatch',JSON.stringify({code:matchCode,timestamp:Date.now(),isViewer:isViewer,gameMode:'multi'}));
-        return()=>{if(matchRef.current){matchRef.current.off();ur.remove()}}
+
+
+
+return()=>{if(matchRef.current){matchRef.current.off();kickedUsersRef.off();ur.remove()}}
       },[isMultiplayer,matchCode,isViewer]);
 
 const kickEditor=(editorId)=>{
@@ -509,7 +530,7 @@ const kickEditor=(editorId)=>{
     return;
   }
   
-  if(window.confirm(`Kick this editor from the game?`)){
+  if(window.confirm('Kick this editor from the game?')){
     matchRef.current.update({
       [`users/${editorId}`]:null,
       [`kickedUsers/${editorId}`]:{
